[gd_scene load_steps=12 format=3 uid="uid://dlr5huenvbia8"]

[ext_resource type="Script" path="res://src/ui/dialogue/dialogue.gd" id="1_mhki6"]
[ext_resource type="AudioStream" uid="uid://bgyhqjx3yf8c1" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Crackling Radio Voice 1.wav" id="2_eoilq"]
[ext_resource type="AudioStream" uid="uid://b5g35hl20mcbk" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Neutral Radio Voice 1.wav" id="3_gtpuu"]
[ext_resource type="AudioStream" uid="uid://168l2ms15sgv" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Neutral Radio Voice 3.wav" id="4_t6qh2"]
[ext_resource type="AudioStream" uid="uid://by3u2a2r08123" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Neutral Radio Voice 4.wav" id="5_crrws"]
[ext_resource type="AudioStream" uid="uid://bfperjte44ja2" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Neutral Radio Voice 5.wav" id="6_gpiwn"]
[ext_resource type="AudioStream" uid="uid://ddrjw05umf57v" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Neutral Radio Voice 6.wav" id="7_ob43j"]
[ext_resource type="AudioStream" uid="uid://bo073rcxici5b" path="res://asset/snd/6081 - Unintelligible Male Radio Voice Pack 1/Unintelligible Male Neutral Radio Voice 8.wav" id="8_majgt"]
[ext_resource type="AudioStream" uid="uid://doasgi164mq1g" path="res://asset/snd/10287 - Sci-Fi Alien Interface Sound Effects Pack/Sci-Fi Alien Interface Sound 4.wav" id="9_khrv2"]
[ext_resource type="AudioStream" uid="uid://b28p215bebbx2" path="res://asset/snd/10287 - Sci-Fi Alien Interface Sound Effects Pack/Sci-Fi Alien Interface Sound 6.wav" id="9_tfegu"]
[ext_resource type="AudioStream" uid="uid://b2hpi4iqmivtc" path="res://asset/snd/Robotic_Voices/Alert_SFX/Alert3.wav" id="10_q4xse"]

[node name="dialogue" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mhki6")
snd_library = Array[AudioStream]([ExtResource("2_eoilq"), ExtResource("3_gtpuu"), ExtResource("4_t6qh2"), ExtResource("5_crrws"), ExtResource("6_gpiwn"), ExtResource("7_ob43j"), ExtResource("8_majgt")])

[node name="snd" type="AudioStreamPlayer" parent="."]
bus = &"sfx"

[node name="snd_continue" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_tfegu")
bus = &"sfx"

[node name="snd_nav" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_khrv2")
bus = &"sfx"

[node name="snd_show" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_q4xse")
bus = &"sfx"

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0313726, 0.0392157, 0.0392157, 0.501961)

[node name="center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="panel" type="PanelContainer" parent="center"]
layout_mode = 2

[node name="margin" type="MarginContainer" parent="center/panel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="center/panel/margin"]
layout_mode = 2

[node name="richTextLabel" type="RichTextLabel" parent="center/panel/margin/VBoxContainer"]
custom_minimum_size = Vector2(480, 160)
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="continue" type="Button" parent="center/panel/margin/VBoxContainer"]
visible = false
layout_mode = 2
text = "Continue"

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="finished" from="snd" to="." method="_on_snd_finished"]
[connection signal="pressed" from="center/panel/margin/VBoxContainer/continue" to="." method="_on_continue_pressed"]
